--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,9 @@
-# Auto detect text files and perform LF normalization
+# Set the default behavior, in case people don't have core.autocrlf set.
 * text=auto
+
+# Explicitly declare text files you want to always be normalized and converted
+# to native line endings on checkout.
+*.bat text
+*.ps1 text
+*.txt text
+*.cmd text
