--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,7 @@
 *.ps1 text eol=crlf
 *.txt text eol=crlf
 *.cmd text eol=crlf
+*.vbs text eol=crlf
+*.cpp text eol=crlf
+*.cfg text eol=crlf
+*.reg text eol=crlf
