--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ ExternalWIN/DISMApplyExclusions.cfg
 ExternalWIN/DISMCapExclusions.cfg
 ExternalWIN/ApplyExclusions.cfg
 ExternalWIN/CaptureExclusions.cfg
+ExternalWIN/ExtractExclusions.cfg
