--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ ExternalWIN/DISMCapExclusions.cfg
 ExternalWIN/ApplyExclusions.cfg
 ExternalWIN/CaptureExclusions.cfg
 ExternalWIN/ExtractExclusions.cfg
+ExternalWIN/test2.vbs
