fix onedrive printing
fixed recursion issue when generating an exclusion list
fixed blacklisting all non onedrive offline files(I will have to test to see if that's a good idea)

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ ExternalWIN/ApplyExclusions.cfg
 ExternalWIN/CaptureExclusions.cfg
 ExternalWIN/ExtractExclusions.cfg
 ExternalWIN/test2.vbs
+ExternalWIN/DirSafe/PrintReparsePointsBL.cfg
+ExternalWIN/DirSafe/SRCHDirBL.cfg
+ExternalWIN/DirSafe/SRCHReparsePoints.cfg
