--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ ExternalWIN/test2.vbs
 ExternalWIN/DirSafe/PrintReparsePointsBL.cfg
 ExternalWIN/DirSafe/SRCHDirBL.cfg
 ExternalWIN/DirSafe/SRCHReparsePoints.cfg
+ExternalWIN/PatchJLinks-Old.vbs
